--- a/style/style.css
+++ b/style/style.css
@@ -361,3 +361,13 @@ table tr td
 { background: #E5E5DB;
   color: #47433F;
   border-top: 1px solid #FFF;}
+
+#menu {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.menu-center {
+    margin: 0 auto;
+}
+
